crates/rattler_menuinst/src/linux/snapshots/rattler_menuinst__linux__menu_xml__tests__add_and_remove_menu-3.snap
---
source: crates/rattler_menuinst/src/linux/menu_xml.rs
expression: res
---
<!DOCTYPE Menu PUBLIC "-//freedesktop//DTD Menu 1.0//EN"
 "http://standards.freedesktop.org/menu-spec/menu-1.0.dtd">
<Menu><Name>Applications</Name><MergeFile type="parent">/path/to/system_menu</MergeFile>  </Menu>
