crates/rattler_menuinst/src/linux/snapshots/rattler_menuinst__linux__menu_xml__tests__add_and_remove_menu.snap
---
source: crates/rattler_menuinst/src/linux/menu_xml.rs
expression: res
---
<Menu><Name>Applications</Name><MergeFile type="parent">/path/to/system_menu</MergeFile></Menu>
