crates/rattler_menuinst/src/linux/snapshots/rattler_menuinst__linux__menu_xml__tests__add_and_remove_menu_xml_structure-2.snap
---
source: crates/rattler_menuinst/src/linux/menu_xml.rs
expression: result
---
<!DOCTYPE Menu PUBLIC "-//freedesktop//DTD Menu 1.0//EN"
"http://www.freedesktop.org/standards/menu-spec/menu-1.0.dtd">
<Menu>
  <Name>Applications</Name>
  <Menu>
    <Name>WebMirror</Name>
    <Directory>shinythings-webmirror.directory</Directory>
    <Include>
      <Filename>shinythings-webmirror.desktop</Filename>
      <Filename>shinythings-webmirror-admin.desktop</Filename>
    </Include>
  </Menu>
